syntax = "proto3";

import "google/protobuf/empty.proto";
 
option csharp_namespace = "WebApi.gRpc";
 
package translator;
 
service Translator {
  rpc GetTranslationsOfOneTextIntoManyLanguages(GetTranslationsOfOneTextIntoManyLanguagesCommand) returns (TranslatingOneTextIntoManyLanguagesResult);
  
  rpc GetTranslationsOfManyTextsIntoOneLanguage(GetTranslationsOfManyTextsIntoOneLanguageCommand) returns (TranslatingManyTextsIntoOneLanguageResult);
  
  rpc GetInformation(google.protobuf.Empty) returns (Information);
}

message GetTranslationsOfOneTextIntoManyLanguagesCommand {
  string text = 1;
  
  repeated string languages = 2;
}

message TranslatingOneTextIntoManyLanguagesResult {
  string sourceText = 1;
  
  map<string, string> translationsByLanguage = 2;
}

message GetTranslationsOfManyTextsIntoOneLanguageCommand  {
    repeated string texts = 1;
    
    string language = 2;
}

message TranslatingManyTextsIntoOneLanguageResult {
  string language = 1;
  
  map<string, string> translationsBySourceTexts = 2;
}

message Information {
  string cacheProvider = 1;
  
  string server = 2;
}